@@ -10,7 +10,7 @@ Normalizing a File
 When normalizing a file, the goal is to standardize indenting, comment
 placement, and quoting, without changing the semantics of the file. We do this
 by reading in the file per the spec, and then emitting the same configuration
-in a standard way.  
+in a standard way.
 
 We always emit identifiers unquoted.  We always emit values quoted, using a single
 quote unless the value contains a single quote, in which case we'll use double
@@ -38,7 +38,7 @@ These regular expressions tell us what sort of line we're dealing with:
     - **List line:** ``(^\s*)(list)(\s+)(.*?)(\s*$)``
 
 Any line that does not match one of these regular expressions is an invalid
-line per the specification.  
+line per the specification.
 
 We can simplify these regular expressions into a single check:
 
@@ -46,21 +46,21 @@ We can simplify these regular expressions into a single check:
 
 With this regular expression, if group #4 is `#`, then we have a comment,
 with the comment text in group #5 and leading whitespace in group #3.  Otherwise,
-group #8 gives us the type of the line (``package``, ``config``, ``option`` 
+group #8 gives us the type of the line (``package``, ``config``, ``option``
 or ``list``) and group #10 gives us the remainder of the line after the type.
 
 Next, we need to parse the data on each line according to the individual rules
 for the type of line.  The UCI restrictions on identifiers are enforced,
 including that empty identifiers are not legal.  We also enforce quoting rules,
-including that quotes must match.  
+including that quotes must match.
 
 The spec is silent about embedded and escaped quotes within option values.
 I've chosen to assume that a double-quoted string may contain single quotes and
-vice-versa (like in Python or Perl) but that escaped quotes are not allowed.  
+vice-versa (like in Python or Perl) but that escaped quotes are not allowed.
 
 We do not validate boolean values.  The spec supports a specific list, but you
 can't really identify from looking at the file whether an option is supposed to
-be a boolean or just a string. 
+be a boolean or just a string.
 
 Regardless, if the first regular expression matches a line, and the second
 regular expression does not, then the line isn't valid and we can't process it.
@@ -103,7 +103,7 @@ discussed above.
 UCI Syntax Specification
 ========================
 
-*Note:* This section was taken from the OpenWRT UCI_ documentation.  
+*Note:* This section was taken from the OpenWRT UCI_ documentation.
 
 The UCI configuration files usually consist of one or more config statements,
 so called sections with one or more option statements defining the actual
@@ -116,13 +116,13 @@ are considered a comment and ignored.
 Below is an example of a simple configuration file::
 
     package 'example'
-     
+
     config 'example' 'test'
             option   'string'      'some value'
             option   'boolean'     '1'
             list     'collection'  'first item'
             list     'collection'  'second item'
-        
+
 The config ``'example' 'test'`` statement defines the start of a section with
 the type ``example`` and the name ``test``. There can also be so called anonymous
 sections with only a type, but no name identifier. The type is important for
