@@ -7,6 +7,7 @@ Version 0.1.27     unreleased
 	* Add a new `run clean` target to clean up generated data.
 	* Move unit tests from `tests` into `src/tests/uciparse`.
 	* Update the MyPy configuration so we're using latest rules.
+	* Replace black and isort tools with the Ruff formatter.
 	* Update the jinja2 transitive dependency to address CVE-2025-27516.
 	* Update the requests transitive dependency to address CVE-2024-47081.
 	* Update the urllib3 transitive dependency to address CVE-2025-50181.
